[tool.poetry]
name = "aragog-demo"
version = "0.1.0"
description = "A quick RAG demo"
authors = ["Luis G. <neat@duck.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
pydantic = "<2"
rag-chroma-private = {path = "packages/rag-chroma-private", develop = true}


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
