[tool.poetry]
name = "aragog-demo"
version = "0.1.0"
description = "A quick RAG demo"
authors = ["Luis G. <neat@duck.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
pydantic = "<2"
langchain = "^0.1"
tiktoken = ">=0.5.1"
chromadb = ">=0.4.14"
gpt4all = ">=1.0.8"
beautifulsoup4 = ">=4.12.2"
langchain-text-splitters = ">=0.0.1,<0.1"

[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
